--- a/vperf-web/src/main/webapp/bootstrap/css/bootstrap.css
+++ b/vperf-web/src/main/webapp/bootstrap/css/bootstrap.css
@@ -3720,7 +3720,7 @@ input[type="submit"].btn.btn-mini {
 
 .navbar-fixed-top,
 .navbar-fixed-bottom {
-  position: fixed;
+  /*position: fixed;*/
   right: 0;
   left: 0;
   z-index: 1030;
